@@ -434,7 +434,7 @@ static const ASM_MAPPING _asxxxx_mapping[] = {
    "; ---------------------------------"},
   {"functionlabeldef", "%s:"},
   {"globalfunctionlabeldef", "%s::"},
-  {"bankimmeds", "0     ; PENDING: bank support"},
+  {"bankimmeds", "b%s"},
   {"los", "(%s & 0xFF)"},
   {"his", "(%s >> 8)"},
   {"hihis", "(%s >> 16)"},
@@ -486,7 +486,7 @@ static const ASM_MAPPING _asxxxx_smallpdk_mapping[] = {
    "; ---------------------------------"},
   {"functionlabeldef", "%s:"},
   {"globalfunctionlabeldef", "%s::"},
-  {"bankimmeds", "0     ; PENDING: bank support"},
+  {"bankimmeds", "b%s"},
   {"los", "(%s & 0xFF)"},
   {"his", "(%s >> 8)"},
   {"hihis", "(%s >> 16)"},
